update report component

--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -54,11 +54,11 @@
             <li>Pay the duty online</li>
             <li>Proof of Delivery</li>
           </ul>
-          <mat-card-actions>
-            <button mat-button class="btn btn-primary" style="margin-left:120px"> Log In or Sign Up </button>
+        <mat-card-actions>
+            <a routerLink='/account/register'><button mat-button class="btn btn-primary" style="margin-left:120px"> Log In or Sign Up </button> </a>
           </mat-card-actions>
         </mat-card-content >
-       
+
       </mat-card>
 
       <mat-card  fxFlex="23"class='example-card'>
@@ -79,7 +79,7 @@
             <button mat-button class="btn btn-secondary" style="margin-left:120px"> Log In or Sign Up </button>
           </mat-card-actions>
         </mat-card-content >
-        
+
       </mat-card>
 
     <mat-card fxFlex="23"class='example-card' >
@@ -125,7 +125,7 @@
   </div>
 
   <div fxLayout="row" fxLayoutAlign="space-around center">
-   
+
 
     <mat-card  fxFlex="23"class='example-card'>
       <mat-card-header>
@@ -167,7 +167,7 @@
     </mat-card-content >
   </mat-card>
 
-  
+
   <mat-card  fxFlex="23"class='example-card'>
     <mat-card-header>
       <mat-card-title>
@@ -206,7 +206,7 @@
           <button mat-button class="btn btn-info" style="margin-left:120px"> Log In or Sign Up </button>
         </mat-card-actions>
   </mat-card-content >
-  
+
 </mat-card>
 
 </div>
