--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,9 +1,10 @@
-<div class="col-md-12">
-  <div class="card card-container">
+<div class="container col-md-3">
+  <div class="card" style="margin-top: 200px;">
     <img
       id="profile-img"
       src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
       class="profile-img-card"
+      style="max-height: 200px;"
     />
     <form
       *ngIf="!isSuccessful"
