updated nav reports components

--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -17,8 +17,9 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
    <mat-icon>share</mat-icon>
  </button>
-
+  
   <span class="toolbar-filler"></span>
+  <input type="search" value="search">
   <a routerLink="/"><button id="button-logout" type="button" class="btn btn-warning" >Log Out</button> </a>
 </mat-toolbar>
 
