--- a/src/app/pages/air-import/air-import.component.html
+++ b/src/app/pages/air-import/air-import.component.html
@@ -14,8 +14,7 @@
       class="ag-theme-alpine-dark"
       [rowData]="rowData"
       [columnDefs]="columnDefs"
-      rowSelection="multiple"
-    >
+      rowSelection="multiple"    >
     </ag-grid-angular>
   </mat-tab>
 
