--- a/src/app/extrapages/ae-form/ae-form.component.html
+++ b/src/app/extrapages/ae-form/ae-form.component.html
@@ -1,7 +1,86 @@
-<div class="container">
+<div class="container-fluid">
   <div [hidden]="submitted">
     <h1>User Form</h1>
     <form (ngSubmit)="onSubmit()" #userForm="ngForm">
+      <div class="row">
+        <div class="form-group md-1 col-1">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-2">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-2">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+        <div class="form-group md-1 col-1">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-2">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-2">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-2">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+
+      </div>
+
       <div class="row">
         <div class="form-group md-1 col-2">
           <label for="username">User Name</label>
@@ -36,7 +115,243 @@
 
       </div>
 
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
 
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="form-group md-1 col-2">
+          <label for="username">User Name</label>
+          <input type="text" class="form-control" id="username"
+                required
+                [(ngModel)]="model.username" name="username"
+                #username="ngModel">
+          <div [hidden]="username.valid || username.pristine"
+              class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+
+        <div class="form-group md-3 col-4">
+          <label for="alterEgo">First Name</label>
+          <input type="text" class="form-control" id="firstName"
+                [(ngModel)]="model.firstName" name="firstName">
+        </div>
+
+        <div class="form-group md-3 col-5">
+          <label for="power">Last Name</label>
+          <select class="form-control" id="lastName"
+                  required
+                  [(ngModel)]="model.lastName" name="lastName"
+                  #power="ngModel">
+            <option *ngFor="let pow of powers" [value]="pow">{{pow}}</option>
+          </select>
+          <div [hidden]="power.valid || power.pristine" class="alert alert-danger">
+            Power is required
+          </div>
+        </div>
+
+      </div>
 
       <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Submit</button>
       <button type="button" class="btn btn-default" (click)="newUser(); userForm.reset()">New Hero</button>
