--- a/src/app/pages/tables/country/country.component.html
+++ b/src/app/pages/tables/country/country.component.html
@@ -14,6 +14,36 @@
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
     </ng-container>
 
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      </ng-container>
+      
+      <!-- flag Column -->
+      <ng-container matColumnDef="flag">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Flag</th>
+        <td mat-cell *matCellDef="let row">{{row.flag}}</td>
+      </ng-container>
+
+      <!-- Id Column -->
+      <ng-container matColumnDef="area">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Area</th>
+        <td mat-cell *matCellDef="let row">{{row.area}}</td>
+      </ng-container>
+
+      <!-- Id Column -->
+      <ng-container matColumnDef="population">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Population</th>
+        <td mat-cell *matCellDef="let row">{{row.population}}</td>
+      </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
@@ -25,4 +55,5 @@
       [pageSizeOptions]="[5, 10, 20]"
       aria-label="Select page">
   </mat-paginator>
+
 </div>
