added detail components

--- a/src/app/pages/customs-brokerage/entry-grid/entry-grid.component.html
+++ b/src/app/pages/customs-brokerage/entry-grid/entry-grid.component.html
@@ -1,3 +1,4 @@
+<a routerLink="detail/{{rowData}}">
 <ag-grid-angular
     style="width: auto; height: 700px;"
     class="ag-theme-alpine"
@@ -10,3 +11,5 @@
 
 >
 </ag-grid-angular>
+
+</a>
