--- a/src/app/pages/parties/clients/clients.component.scss
+++ b/src/app/pages/parties/clients/clients.component.scss
@@ -1,27 +1,14 @@
-.full-width {
-  width: 100%;
+h1 {
+  text-align: center;
+  color:darkslateblue
+}
+
+.wrapper {
+  width: 90%;
+  margin: 40px
 }
 
 .shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
-}
-
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.col {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.col:last-child {
-  margin-right: 0;
+  width: 400px;
+  height: auto
 }
