--- a/src/app/pages/parties/clients/clients.component.html
+++ b/src/app/pages/parties/clients/clients.component.html
@@ -9,12 +9,14 @@
       <mat-card-content>
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
+              <mat-label>Client ID</mat-label>
               <input matInput placeholder="Client ID" formControlName="clientId">
             </mat-form-field>
         </div>
 
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
+              <mat-label>Company Name</mat-label>
               <input matInput placeholder="Company name" formControlName="name">
               <mat-error *ngIf="importerForm.controls['name'].hasError('required')">
                 Company name is <strong>required</strong>
@@ -24,6 +26,7 @@
         
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
+              <mat-label>Address Line 1</mat-label>
               <input matInput placeholder="Address Line 1" formControlName="address1">
               <mat-error *ngIf="importerForm.controls['address1'].hasError('required')">
                 Address Line 1 is <strong>required</strong>
@@ -39,12 +42,14 @@
 
         <div class="row" *ngIf="hasUnitNumber">
             <mat-form-field class="full-width" appearance='fill'>
+              <mat-label>Address Line 2</mat-label>
               <textarea matInput placeholder="Address 2" formControlName="address2"></textarea>
             </mat-form-field>
         </div>
 
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
+              <mat-label>City</mat-label>
               <input matInput placeholder="City" formControlName="city">
               <mat-error *ngIf="importerForm.controls['city'].hasError('required')">
                 City is <strong>required</strong>
@@ -57,6 +62,7 @@
 
           
           <mat-form-field class="full-width col-6" appearance='fill'>
+            <mat-label>State</mat-label>
             <mat-select placeholder="State" formControlName="state">
               <mat-option *ngFor="let state of states" [value]="state.abbreviation">
                 {{ state.name }}
@@ -68,6 +74,7 @@
           </mat-form-field>
 
             <mat-form-field class="full-width col-6" appearance='fill'>
+              <mat-label>Zip Code</mat-label>
               <input matInput #postalCode maxlength="5" placeholder="Postal Code" type="number" formControlName="postalCode">
               <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
             </mat-form-field>
@@ -75,6 +82,7 @@
  
           <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
+              <mat-label>Country</mat-label>
               <input matInput placeholder="Country Name" type="text" formControlName="country">
             </mat-form-field>
           </div>
@@ -82,14 +90,17 @@
 
         <div class="row">
               <mat-form-field class="full-width" appearance='fill'>
+                <mat-label>Phone 1</mat-label>
                 <input matInput placeholder="Telephone #" type="number" formControlName="phone1">
               </mat-form-field>
   
               <mat-form-field class="full-width" appearance='fill'>
+                <mat-label>Email 1</mat-label>
                 <input matInput placeholder="EMail" type="email" formControlName="email">
               </mat-form-field>
 
                 <mat-form-field class="full-width" appearance='fill'>
+                  <mat-label>Website Addr:</mat-label>
                   <input matInput placeholder="Website" type="text" formControlName="website">
                 </mat-form-field>
   
@@ -232,15 +243,15 @@
         </div>
 
         <div class="row">
-          <div class="col">
             <mat-form-field class="full-width" appearance='fill'>
               <input matInput placeholder="City" formControlName="city">
               <mat-error *ngIf="importerForm.controls['city'].hasError('required')">
                 City is <strong>required</strong>
               </mat-error>
             </mat-form-field>
-          </div>
-          <div class="col">
+        </div>
+
+        <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
               <mat-select placeholder="State" formControlName="state">
                 <mat-option *ngFor="let state of states" [value]="state.abbreviation">
@@ -251,43 +262,32 @@
                 State is <strong>required</strong>
               </mat-error>
             </mat-form-field>
-          </div>
         </div>
 
         <div class="row">
-          <div class="col">
             <mat-form-field class="full-width" appearance='fill'>
               <input matInput #postalCode maxlength="5" placeholder="Postal Code" type="number" formControlName="postalCode">
               <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
             </mat-form-field>
-          </div>
 
-          <div class="col">
             <mat-form-field class="full-width" appearance='fill'>
               <input matInput placeholder="Country Name" type="text" formControlName="country">
             </mat-form-field>
-          </div>
 
         </div>
 
         <div class="row">
-            <div class="col">
               <mat-form-field class="full-width" appearance='fill'>
                 <input matInput placeholder="Telephone #" type="number" formControlName="phone1">
               </mat-form-field>
-            </div>
   
-            <div class="col">
               <mat-form-field class="full-width" appearance='fill'>
                 <input matInput placeholder="EMail" type="email" formControlName="email">
               </mat-form-field>
-            </div>
 
-            <div class="col">
                 <mat-form-field class="full-width" appearance='fill'>
                   <input matInput placeholder="Website" type="text" formControlName="website">
                 </mat-form-field>
-            </div>
   
           </div>
       
