Updated entry-detail and clients

--- a/src/app/pages/parties/clients/clients.component.html
+++ b/src/app/pages/parties/clients/clients.component.html
@@ -23,7 +23,7 @@
               </mat-error>
             </mat-form-field>
         </div>
-        
+
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
               <mat-label>Address Line 1</mat-label>
@@ -33,7 +33,7 @@
               </mat-error>
             </mat-form-field>
         </div>
-        
+
         <div class="row" *ngIf="!hasUnitNumber">
             <button mat-button type="button" (click)="hasUnitNumber = !hasUnitNumber">
               + Add C/O, Apt, Suite, Unit
@@ -60,7 +60,7 @@
 
         <div class="row">
 
-          
+
           <mat-form-field class="full-width col-6" appearance='fill'>
             <mat-label>State</mat-label>
             <mat-select placeholder="State" formControlName="state">
@@ -79,7 +79,7 @@
               <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
             </mat-form-field>
         </div>
- 
+
           <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
               <mat-label>Country</mat-label>
@@ -93,7 +93,7 @@
                 <mat-label>Phone 1</mat-label>
                 <input matInput placeholder="Telephone #" type="number" formControlName="phone1">
               </mat-form-field>
-  
+
               <mat-form-field class="full-width" appearance='fill'>
                 <mat-label>Email 1</mat-label>
                 <input matInput placeholder="EMail" type="email" formControlName="email">
@@ -103,9 +103,9 @@
                   <mat-label>Website Addr:</mat-label>
                   <input matInput placeholder="Website" type="text" formControlName="website">
                 </mat-form-field>
-  
+
           </div>
-      
+
       </mat-card-content>
     </mat-card>
 
@@ -117,89 +117,46 @@
       <mat-card-content>
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
-              <input matInput placeholder="Client ID" formControlName="clientId">
+              <mat-label>Effective Date</mat-label>
+              <input matInput placeholder="Effective Date" formControlName="effectiveDate">
             </mat-form-field>
         </div>
 
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
-              <input matInput placeholder="Company name" formControlName="name">
-              <mat-error *ngIf="importerForm.controls['name'].hasError('required')">
-                Company name is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-        </div>
-        
-        <div class="row">
-            <mat-form-field class="full-width" appearance='fill'>
-              <input matInput placeholder="Address Line 1" formControlName="address1">
-              <mat-error *ngIf="importerForm.controls['address1'].hasError('required')">
-                Address Line 1 is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-        </div>
-        
-        <div class="row" *ngIf="!hasUnitNumber">
-            <button mat-button type="button" (click)="hasUnitNumber = !hasUnitNumber">
-              + Add C/O, Apt, Suite, Unit
-            </button>
-        </div>
-
-        <div class="row" *ngIf="hasUnitNumber">
-            <mat-form-field class="full-width" appearance='fill'>
-              <textarea matInput placeholder="Address 2" formControlName="address2"></textarea>
+              <mat-label>Bond No.</mat-label>
+              <input matInput placeholder="Bond Number" formControlName="bondNo">
             </mat-form-field>
         </div>
 
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
-              <input matInput placeholder="City" formControlName="city">
-              <mat-error *ngIf="importerForm.controls['city'].hasError('required')">
-                City is <strong>required</strong>
-              </mat-error>
+              <mat-label>Amount of bond</mat-label>
+              <input matInput placeholder="Bond Amount" formControlName="amount">
             </mat-form-field>
+        </div>
 
+        <div class="row" >
             <mat-form-field class="full-width" appearance='fill'>
-              <mat-select placeholder="State" formControlName="state">
-                <mat-option *ngFor="let state of states" [value]="state.abbreviation">
-                  {{ state.name }}
-                </mat-option>
-              </mat-select>
-              <mat-error *ngIf="importerForm.controls['state'].hasError('required')">
-                State is <strong>required</strong>
-              </mat-error>
+              <mat-label>Surety Code</mat-label>
+              <input matInput placeholder="Surety Code" formControlName="suretyCode">
             </mat-form-field>
         </div>
 
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
-              <input matInput #postalCode maxlength="5" placeholder="Postal Code" type="number" formControlName="postalCode">
-              <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
+              <mat-label>Port Filed</mat-label>
+              <input matInput placeholder="Port Filed" formControlName="portFiled">
             </mat-form-field>
 
             <mat-form-field class="full-width" appearance='fill'>
-              <input matInput placeholder="Country Name" type="text" formControlName="country">
+              <mat-label>Bond Holder Name</mat-label>
+              <input matInput placeholder="Bond Holder Name" formControlName="holderName">
             </mat-form-field>
         </div>
-
-        <div class="row">
-              <mat-form-field class="full-width" appearance='fill'>
-                <input matInput placeholder="Telephone #" type="number" formControlName="phone1">
-              </mat-form-field>
-  
-              <mat-form-field class="full-width" appearance='fill'>
-                <input matInput placeholder="EMail" type="email" formControlName="email">
-              </mat-form-field>
-
-                <mat-form-field class="full-width" appearance='fill'>
-                  <input matInput placeholder="Website" type="text" formControlName="website">
-                </mat-form-field>
-  
-          </div>
-      
       </mat-card-content>
     </mat-card>
-    
+
     <mat-card class="shipping-card">
       <mat-card-header>
         <mat-card-title>Other Information</mat-card-title>
@@ -220,7 +177,7 @@
               </mat-error>
             </mat-form-field>
         </div>
-        
+
         <div class="row">
             <mat-form-field class="full-width" appearance='fill'>
               <input matInput placeholder="Address Line 1" formControlName="address1">
@@ -229,7 +186,7 @@
               </mat-error>
             </mat-form-field>
         </div>
-        
+
         <div class="row" *ngIf="!hasUnitNumber">
             <button mat-button type="button" (click)="hasUnitNumber = !hasUnitNumber">
               + Add C/O, Apt, Suite, Unit
@@ -280,7 +237,7 @@
               <mat-form-field class="full-width" appearance='fill'>
                 <input matInput placeholder="Telephone #" type="number" formControlName="phone1">
               </mat-form-field>
-  
+
               <mat-form-field class="full-width" appearance='fill'>
                 <input matInput placeholder="EMail" type="email" formControlName="email">
               </mat-form-field>
@@ -288,13 +245,18 @@
                 <mat-form-field class="full-width" appearance='fill'>
                   <input matInput placeholder="Website" type="text" formControlName="website">
                 </mat-form-field>
-  
+
           </div>
-      
+
       </mat-card-content>
     </mat-card>
 
    </div>
   </form>
-  
+
   <p> Form Value: {{ importerForm.value | json }}</p>
+
+  <button type="button" class="btn btn-primary" (click)="onSubmit()">
+    Get Importers
+  </button>
+  
