--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -83,7 +83,7 @@ h1 {
 mat-sidenav-content {
   height: 900px;
   background-color: red; /* For browsers that do not support gradients */
-  background-image: linear-gradient(gray, rgb(255, 255, 255));
+  background-image: linear-gradient(beige, rgb(255, 255, 255));
   margin: auto;
 }
 
