--- a/src/app/pages/customs-brokerage/entry-grid/entry-grid.component.html
+++ b/src/app/pages/customs-brokerage/entry-grid/entry-grid.component.html
@@ -1,4 +1,4 @@
-<a routerLink="detail/${rowData.refNo}">
+<a routerLink="detail/{{rowData[1].refNo}}">
 <ag-grid-angular
     style="width: auto; height: 700px;"
     class="ag-theme-alpine"
@@ -13,4 +13,4 @@
 </ag-grid-angular>
 
 </a>
-
+<p>{{rowData[1].refNo}}</p>
