--- a/src/app/pages/trucking/air/air.component.html
+++ b/src/app/pages/trucking/air/air.component.html
@@ -6,3 +6,13 @@
 <mat-card>Last Year</mat-card>
 <mat-card>Today Delivery</mat-card>
 <mat-card>Future Deliveries</mat-card>
+
+<mat-grid-list cols="12" rowHeight="100px">
+  <mat-grid-tile
+      *ngFor="let tile of tiles"
+      [colspan]="tile.cols"
+      [rowspan]="tile.rows"
+      [style.background]="tile.color">
+    {{tile.text}}
+  </mat-grid-tile>
+</mat-grid-list>
